prevented the website from overflowing in the x axis.

--- a/src/assets/scss/setting/_initialize.scss
+++ b/src/assets/scss/setting/_initialize.scss
@@ -30,6 +30,7 @@ ol[role='list'] {
 /* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Set core body defaults */
